# SM-Algorithm

./: CMakeLists.txt  Makefile  README.md  SM3.hpp  SM4.hpp  hex.py  main.cpp  out.txt  truth.txt
include/: sm3.h  sm4.h
src/: main.cpp  sm3.cpp  sm4.cpp
test/: sm4.key
